# insta-bot

./: LICENSE  README.md  pyproject.toml
insta_comment/: app.py  list.py
